force-app/main/default/objects/Team__c/fields/CarOne__c.field-meta.xml
<CustomField>
    <fullName>CarOne__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CarOne</label>
    <referenceTo>Car__c</referenceTo>
    <relationshipLabel>Teams</relationshipLabel>
    <relationshipName>Teams</relationshipName>
    <type>Lookup</type>
</CustomField>