force-app/main/default/objects/Team__c/fields/CarTwo__c.field-meta.xml
<CustomField>
    <fullName>CarTwo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CarTwo</label>
    <referenceTo>Car__c</referenceTo>
    <relationshipLabel>Teams (CarTwo)</relationshipLabel>
    <relationshipName>Teams1</relationshipName>
    <type>Lookup</type>
</CustomField>