force-app/main/default/objects/Team__c/fields/DriverOne__c.field-meta.xml
<CustomField>
    <fullName>DriverOne__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DriverOne</label>
    <referenceTo>Driver__c</referenceTo>
    <relationshipLabel>Teams (DriverOne)</relationshipLabel>
    <relationshipName>Teams</relationshipName>
    <type>Lookup</type>
</CustomField>