force-app/main/default/objects/Team__c/fields/DriverTwo__c.field-meta.xml
<CustomField>
    <fullName>DriverTwo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DriverTwo</label>
    <referenceTo>Driver__c</referenceTo>
    <relationshipLabel>Teams (DriverTwo)</relationshipLabel>
    <relationshipName>Teams1</relationshipName>
    <type>Lookup</type>
</CustomField>