force-app/main/default/objects/Team__c/fields/logoImgUrl__c.field-meta.xml
<CustomField>
    <fullName>logoImgUrl__c</fullName>
    <label>logoImgUrl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>