force-app/main/default/objects/Team__c/fields/PrimaryCar__c.field-meta.xml
<CustomField>
    <fullName>PrimaryCar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PrimaryCar</label>
    <referenceTo>Car__c</referenceTo>
    <relationshipLabel>Teams</relationshipLabel>
    <relationshipName>Teams</relationshipName>
    <type>Lookup</type>
</CustomField>