force-app/main/default/objects/Team__c/fields/SecondaryCar__c.field-meta.xml
<CustomField>
    <fullName>SecondaryCar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SecondaryCar</label>
    <referenceTo>Car__c</referenceTo>
    <relationshipLabel>Teams (SecondaryCar)</relationshipLabel>
    <relationshipName>Teams1</relationshipName>
    <type>Lookup</type>
</CustomField>